fix's and refactor